--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="images-dev/general/logo.png" />
     <title>Integerbytes</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run Integerbytes website.</noscript>
     <div id="root"></div>
   </body>
 </html>
